--- a/apps.json
+++ b/apps.json
@@ -95,5 +95,11 @@
 		0.5,
 		"red",
 		"https://is3-ssl.mzstatic.com/image/thumb/Purple114/v4/30/fc/a4/30fca488-5beb-e557-e9c2-eba25be9e9eb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
+	],
+	[
+		"Heute keine Medienzeit\n(aufgrund von Gewalt und Vandalismus)",
+		2048,
+		"black",
+		"http://daramghaus.github.io/icontester/images/iTunesArtwork.png"
 	]
 ]
