--- a/apps.json
+++ b/apps.json
@@ -25,81 +25,51 @@
 		"https://is4-ssl.mzstatic.com/image/thumb/Purple125/v4/fb/e5/99/fbe59990-ede6-4003-721e-8b8f1b8126aa/TwitchAppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
 	],
 	[
-		"Forge of Empires",
+		"Bloons Tooerdiefes 6",
 		256,
 		"lightgreen",
 		"https://is1-ssl.mzstatic.com/image/thumb/Purple124/v4/50/86/10/508610e8-17f5-360f-ef8c-d0f84c423ee9/AppIcon-1x_U007emarketing-0-7-0-0-85-220.png/1200x630wa.png"
 	],
 	[
-		"Among Us",
+		"Zug Limulator",
 		256,
 		"red",
 		"https://is1-ssl.mzstatic.com/image/thumb/Purple124/v4/c7/d9/18/c7d918da-01e7-8713-4129-bbf8e23be665/AppIcon-1x_U007emarketing-0-7-0-85-220.png/1200x630wa.png"
 	],
 	[
-		"My Cafe",
+		"schlihter.io",
 		128,
 		"#ff7777",
 		"https://is4-ssl.mzstatic.com/image/thumb/Purple124/v4/62/f4/35/62f4358a-053b-f696-1515-d0fa9bb91281/AppIcon-0-0-1x_U007emarketing-0-0-0-6-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
 	],
 	[
-		"BTD Battles",
+		"Riseap",
 		64,
 		"darkgreen",
 		"https://is1-ssl.mzstatic.com/image/thumb/Purple114/v4/07/73/8a/07738af5-628d-8676-2de0-9405f21f6a70/AppIcon-0-0-1x_U007emarketing-0-0-0-6-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
 	],
 	[
-		"BTD 6",
-		64,
+		"Among as",
+		32,
 		"brown",
 		"https://is3-ssl.mzstatic.com/image/thumb/Purple114/v4/12/f0/61/12f0616f-1404-b2d4-50f3-94d47d82ed87/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
 	],
 	[
-		"Paddington Run",
-		32,
+		"Geometri desch",
+		16,
 		"lightblue",
 		"https://is2-ssl.mzstatic.com/image/thumb/Purple118/v4/53/ec/8b/53ec8be1-eea6-9918-1900-04938a15daa5/AppIcon-1x_U007emarketing-85-220-9.png/1200x630wa.png"
 	],
 	[
-		"Giana Sisters",
-		16,
+		"Table Jenis",
+		8,
 		"yellow",
 		"https://is1-ssl.mzstatic.com/image/thumb/Purple69/v4/7d/b7/5a/7db75ae9-f94d-d81e-d982-313ba4f4f416/mzl.xsvrebul.png/1200x630wa.png"
 	],
 	[
-		"Big Bang Racing",
-		8,
+		"Asphalt 4Legens",
+		4,
 		"darkblue",
 		"https://is2-ssl.mzstatic.com/image/thumb/Purple123/v4/bb/a8/d7/bba8d74a-cc4e-07b0-bde7-d888154f9393/AppIcon-0-1x_U007emarketing-0-85-220-9.png/1200x630wa.png"
 	],
-	[
-		"Zoo 2: Animal Park",
-		4,
-		"grey",
-		"https://is2-ssl.mzstatic.com/image/thumb/Purple124/v4/c6/23/18/c62318a2-ec31-8354-e237-a258a8a799c0/AppIcon-1x_U007emarketing-0-7-0-85-220.png/1200x630wa.png"
-	],
-	[
-		"Jetpack",
-		2,
-		"lightblue",
-		"https://is2-ssl.mzstatic.com/image/thumb/Purple114/v4/aa/b0/f1/aab0f175-5feb-784e-1b96-5edb787b8691/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
-	],
-	[
-		"Tom Gold Run",
-		1,
-		"#FFD700",
-		"https://is2-ssl.mzstatic.com/image/thumb/Purple115/v4/11/14/15/111415e8-b6eb-361f-5282-dc0af5baf774/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
-	],
-	[
-		"Bus Simulator",
-		0.5,
-		"red",
-		"https://is3-ssl.mzstatic.com/image/thumb/Purple114/v4/30/fc/a4/30fca488-5beb-e557-e9c2-eba25be9e9eb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
-	],
-	[
-		"Heute keine Medienzeit\n(aufgrund von Gewalt und Vandalismus)",
-		128,
-		"black",
-		"https://is3-ssl.mzstatic.com/image/thumb/Purple114/v4/30/fc/a4/30fca488-5beb-e557-e9c2-eba25be9e9eb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
-	]
 ]
