--- a/apps.json
+++ b/apps.json
@@ -1,5 +1,11 @@
 [
 	[
+		"bettels 2",
+		1024,
+		"#333333",
+		"https://is5-ssl.mzstatic.com/image/thumb/Purple114/v4/44/ba/70/44ba709f-7d24-3846-11d2-164db7cd098c/AppIcon-0-0-1x_U007emarketing-0-0-0-9-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png"
+	],
+	[
 		"Minecraft",
 		1024,
 		"#333333",
